--- a/TableSchedule.CSS
+++ b/TableSchedule.CSS
@@ -1,1 +1,22 @@
+.sci{
+  color:red;
+}
+.eng{
+color:green;
+}
+.fr{
+  color:blue;
+}
+.NS{
+  color:yellow;
+}
+.spch{
+  color:purple;
+}
+.phys{
+  color:maroon;
+}
+.rel{
+  color:teal;
+}
 
